2017-02-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Make sure restart_scan is not run
	  twice in parallel

2017-02-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c, server-src/find.c,
	  server-src/tapefile.c: Fix memory leak.

2017-02-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c: NetBSD limit to 14 characters the shm name

2017-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	Allow compilation with libressl
	* config/amanda/amanda_configure.m4: Change order
	* device-src/Makefile.am (libamdevice_la_LDFLAGS): Add -ldl
	* common-src/glib-util.c, device-src/s3-util.c, device-src/s3.c:
	  check for LIBRESSL_VERSION_NUMBER

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-custom-compress-no-exec.pl: Call
	  check_amreport with skip_size

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/calcsize.c: amflock(2,"size");
	* client-src/sendsize.c: Add amflock(1,"size");

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/syshacks.m4: Set BROKEN_SENDMSG on *-apple-darwin*
	* common-src/amutil.c: Do not use ambinf if BROKEN_SENDMSG

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Detect if we have getservbyport_r
	* common-src/amutil.c: use getservbyport if getservbyport_r is not
	  available
	* common-src/protocol.c: Use tread if HAVE_GETSERVBYNAME_R and
	  HAVE_GETSERVBYPORT_R

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: 'copyfile unpack (./.) failed' is normal
	  on restore

2017-02-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (get_sse42): Add default function

2017-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.2

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts III